updated logger